+Fix tab context menu option for Close and Close All not working on Linux.
+Fix minor defect in OSX document icon (patch from auria)
+Fix GTK warning messages during startup on Linux.
+Fix missing definition of error_style for Guepardo syntax theme.
+Fix Unicode handling issue in xml handling for ipc server.
+Fix To Upper/Lower command not working with some characters.

#-----------------------------------------------------------------------------#

VERSION 0.6.48
DATE 05/14/2011
43rd Alpha Release

NEWS:

This release contains some noteable improvements to the Python autocompletion
support. It is more accurate and capabable of producing results under more
scenarios then before. These improvements also extend to the the calltip
support.

Big change in source distributions in this release as well. The primary launch
script is now all lower case. So where as before you would run 'Editra' it is
now standardized on 'editra' to fix a number of long running issues and confusion
with the script that is installed by the wxPython tools package.

For the complete change history please refer to the below changelog.

NEW: [features/enhancements]:
+Improved Python autocompletion, better detect local variables, properties, and
some minor performance improvements.
+Improved Python calltips. Calltips can now be shown more regularly and for
more objects.
+Launch script for source installs is now a lower case 'editra'.
+Source install on Windows now overwrites launch script installed by wxPython
for Editra to allow the separately installed version to be started.
+Expanded unittest suite to verify data in all bundled style sheets.
+Shelf window can now be maximized.
+Updated Launch to version 1.11 (bug fixes)
+Update CodeBrowser to version 1.3 (minor enhancements)

LIBRARY:
+Add LintError and LintWarning markers.

BUG FIXES:
+Fix crash that could occur when loading old format style sheet
+Fix bug in threaded file load that could lead to modified marker being